# higaruma

./: .gitignore  BACKEND_SCHEMA_PROPOSAL.md  DEADLINE_WINDOW_PLAN.md  Dockerfile  EMAIL_TEMPLATE.md  IMPLEMENTATION.md  NOTES.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260617_0001_initial_schema.py  20260622_0002_phase_windows.py
backend/app/: bootstrap.py  config.py  db.py  deps.py  emailer.py  main.py  models.py  schemas.py  security.py  seed.generated.json  seed.py  send_appraisal_emails.py
backend/tests/: test_api.py  test_bootstrap.py  test_config.py  test_emailer.py  test_schema.py  test_seed_command.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
frontend/scripts/: generate_seed.py  generate_zoho_contacts.py
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/app/: providers.tsx  router.tsx
frontend/src/app/layout/: AppShell.tsx  Sidebar.tsx  Topbar.tsx
frontend/src/casebook/: WorkspaceViews.tsx
frontend/src/contracts/: paths.ts
frontend/src/data/: credentials.generated.csv  login_mailmerge.generated.csv  seed.generated.ts  unresolved.generated.md
frontend/src/domains/auth/: api.ts  context.ts  contracts.ts  hooks.ts  provider.tsx
frontend/src/routes/admin/: ReleaseControlPage.tsx
frontend/src/routes/auth/: LoginPage.tsx
frontend/src/routes/employee/: MyAppraisalPage.tsx
frontend/tests/: test_generate_seed.py
(+7 files in other folders)
