[project]
name = "appraisal-backend"
version = "0.1.0"
description = "Phase 1 backend for the BuyBetter appraisal application"
requires-python = ">=3.11"
dependencies = [
  "alembic==1.16.2",
  "fastapi==0.116.1",
  "httpx==0.28.1",
  "PyJWT==2.10.1",
  "psycopg[binary]==3.2.9",
  "pydantic-settings==2.10.1",
  "sqlalchemy==2.0.41",
  "uvicorn[standard]==0.35.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
